# F1_ML_project

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  fly.toml  main.py  pyproject.toml  render.yaml  run.sh  run_server.py
.github/workflows/: ci.yml
data/processed/: 2024_master_results.csv  2025_master_results.csv  feature_engineered_data2024.csv  improved_feature_engineered_data.csv
deploy/: huggingface-README.md
experiments/predict_gp/: predict_qatar_gp.py
notebooks/: advanced_evaluation.ipynb  build_features.ipynb  build_improved_features.ipynb  evaluate_model.ipynb  improved_podium_model.pkl  merge_qualy_race.ipynb  predict_qatar_gp.ipynb  save_f1_qualy_results.ipynb  save_f1_race_results.ipynb  train_model.ipynb  train_model2.ipynb  train_model3.ipynb  tuned_podium_model_2025.pkl
samples/: README.md  build_real_tracks.py  generate_samples.py
src/etl/: clean_f1_data.py  process_qualy_race_results.py  save_f1_qualy_results.py  save_f1_race_results.py
src/f1_ml/: __init__.py  analysis.py  backtest.py  bootstrap.py  cli.py  config.py  data.py  evaluate.py  fantasy.py  features.py  modeling.py  predict.py  racingline.py  server.py  telemetry.py  weekend.py
src/features/: build_features.py  build_improved_features.py
src/models/: evaluate_model.py  improved_podium_model.pkl  (+3 more)
tests/: conftest.py  test_analysis.py  test_cli.py  test_evaluate.py  test_fantasy.py  test_features.py  test_modeling.py  test_racingline.py  test_weekend.py
web/: app.js  charts.js  companion.js  index.html  racingline.js  styles.css  telemetry.js
(+108 files in other folders)
